Update upstream HighwayHash version to commit 8eb7f68 Add support for SSE4.2 and non-SIMD CPUs (as well as AVX2) Add CI configuration for Travis and Appveyor

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "highwayhash",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Lovell Fuller <npm@lovell.info>",
-  "description": "Node.js implementation of HighwayHash, Google's fast and strong AVX2+ hash function",
+  "description": "Node.js implementation of HighwayHash, Google's fast and strong hash function",
   "scripts": {
     "test": "semistandard && node test/unit"
   },
@@ -19,11 +19,11 @@
     "random"
   ],
   "dependencies": {
-    "nan": "^2.3.3"
+    "nan": "^2.5.1"
   },
   "devDependencies": {
-    "long": "^3.1.0",
-    "semistandard": "^7.0.5"
+    "long": "^3.2.0",
+    "semistandard": "^9.2.1"
   },
   "license": "Apache-2.0",
   "engines": {
