--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,21 @@
 language: node_js
-node_js:
-  - "4"
-  - "6"
-  - "7"
-os:
-  - linux
-  - osx
-sudo: false
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-4.8
-osx_image: xcode8.2
-before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX=g++-4.8; fi
 matrix:
-  allow_failures:
-  - os: osx
-    node_js: "4"
+  include:
+    - os: linux
+      dist: trusty
+      sudo: false
+      node_js: "4"
+    - os: linux
+      dist: trusty
+      sudo: false
+      node_js: "6"
+    - os: linux
+      dist: trusty
+      sudo: false
+      node_js: "8"
+    - os: osx
+      osx_image: xcode8.3
+      node_js: "6"
+    - os: osx
+      osx_image: xcode8.3
+      node_js: "8"
