--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "highwayhash",
-  "version": "2.1.1",
+  "version": "2.2.0-alpha",
   "author": "Lovell Fuller <npm@lovell.info>",
   "description": "Node.js implementation of HighwayHash, Google's fast and strong hash function",
   "homepage": "https://github.com/lovell/highwayhash",
   "scripts": {
-    "test": "semistandard && cc && node test/unit"
+    "install": "detect-libc prebuild-install || node-gyp rebuild",
+    "test": "semistandard && cc && node test/unit && detect-libc prebuild-ci"
   },
   "main": "index.js",
   "repository": {
@@ -20,12 +21,16 @@
     "random"
   ],
   "dependencies": {
-    "nan": "^2.5.1"
+    "detect-libc": "^0.2.0",
+    "nan": "^2.7.0",
+    "prebuild-install": "^2.2.2"
   },
   "devDependencies": {
     "cc": "^1.0.1",
     "long": "^3.2.0",
-    "semistandard": "^10.0.0"
+    "prebuild": "^6.2.1",
+    "prebuild-ci": "^2.2.3",
+    "semistandard": "^11.0.0"
   },
   "license": "Apache-2.0",
   "engines": {
