--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,19 +5,10 @@ platform: x64
 environment:
   matrix:
   - nodejs_version: "4"
-    nodejs_arch: "x86"
-  - nodejs_version: "4"
-    nodejs_arch: "x64"
   - nodejs_version: "6"
-    nodejs_arch: "x86"
-  - nodejs_version: "6"
-    nodejs_arch: "x64"
   - nodejs_version: "8"
-    nodejs_arch: "x86"
-  - nodejs_version: "8"
-    nodejs_arch: "x64"
 install:
-  - ps: Install-Product node $env:nodejs_version $env:nodejs_arch
+  - ps: Install-Product node $env:nodejs_version x64
   - npm install -g npm@latest
   - npm install
 test_script:
