--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highwayhash",
-  "version": "2.2.0-alpha",
+  "version": "2.2.0",
   "author": "Lovell Fuller <npm@lovell.info>",
   "description": "Node.js implementation of HighwayHash, Google's fast and strong hash function",
   "homepage": "https://github.com/lovell/highwayhash",
