--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,16 @@ matrix:
       dist: trusty
       sudo: false
       node_js: "8"
+    - os: linux
+      dist: trusty
+      sudo: false
+      node_js: "9"
     - os: osx
       osx_image: xcode8.3
       node_js: "6"
     - os: osx
       osx_image: xcode8.3
       node_js: "8"
+    - os: osx
+      osx_image: xcode8.3
+      node_js: "9"
