--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "random"
   ],
   "dependencies": {
-    "nan": "^2.12.1",
+    "node-addon-api": "^1.2.0",
     "prebuild-install": "^5.2.4"
   },
   "devDependencies": {
