--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ matrix:
     - os: linux
       dist: trusty
       sudo: false
-      node_js: "4"
-    - os: linux
-      dist: trusty
-      sudo: false
       node_js: "6"
     - os: linux
       dist: trusty
@@ -17,6 +13,10 @@ matrix:
       dist: trusty
       sudo: false
       node_js: "10"
+    - os: linux
+      dist: trusty
+      sudo: false
+      node_js: "11"
     - os: osx
       osx_image: xcode8.3
       node_js: "6"
@@ -26,3 +26,6 @@ matrix:
     - os: osx
       osx_image: xcode8.3
       node_js: "10"
+    - os: osx
+      osx_image: xcode8.3
+      node_js: "11"
