--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,76 @@
-language: node_js
 matrix:
   include:
-    - os: linux
+    - name: "Linux (glibc) - Node 6"
+      os: linux
       dist: trusty
       sudo: false
+      language: node_js
       node_js: "6"
-    - os: linux
+    - name: "Linux (glibc) - Node 8"
+      os: linux
       dist: trusty
       sudo: false
+      language: node_js
       node_js: "8"
-    - os: linux
+    - name: "Linux (glibc) - Node 10"
+      os: linux
       dist: trusty
       sudo: false
+      language: node_js
       node_js: "10"
-    - os: linux
+    - name: "Linux (glibc) - Node 11"
+      os: linux
       dist: trusty
       sudo: false
+      language: node_js
       node_js: "11"
-    - os: osx
-      osx_image: xcode8.3
+    - name: "Linux (musl) - Node 8"
+      os: linux
+      dist: trusty
+      sudo: true
+      language: minimal
+      before_install:
+        - sudo docker run -dit --name hh --env CI --env PREBUILD_TOKEN --volume "${PWD}:/mnt/hh" --workdir /mnt/hh node:8-alpine
+        - sudo docker exec hh apk add build-base git python2 --update-cache
+      install: sudo docker exec hh sh -c "npm install --unsafe-perm"
+      script: sudo docker exec hh sh -c "npm test"
+    - name: "Linux (musl) - Node 10"
+      os: linux
+      dist: trusty
+      sudo: true
+      language: minimal
+      before_install:
+        - sudo docker run -dit --name hh --env CI --env PREBUILD_TOKEN --volume "${PWD}:/mnt/hh" --workdir /mnt/hh node:10-alpine
+        - sudo docker exec hh apk add build-base git python2 --update-cache
+      install: sudo docker exec hh sh -c "npm install --unsafe-perm"
+      script: sudo docker exec hh sh -c "npm test"
+    - name: "Linux (musl) - Node 11"
+      os: linux
+      dist: trusty
+      sudo: true
+      language: minimal
+      before_install:
+        - sudo docker run -dit --name hh --env CI --env PREBUILD_TOKEN --volume "${PWD}:/mnt/hh" --workdir /mnt/hh node:11-alpine
+        - sudo docker exec hh apk add build-base git python2 --update-cache
+      install: sudo docker exec hh sh -c "npm install --unsafe-perm"
+      script: sudo docker exec hh sh -c "npm test"
+    - name: "OS X - Node 6"
+      os: osx
+      osx_image: xcode9.2
+      language: node_js
       node_js: "6"
-    - os: osx
-      osx_image: xcode8.3
+    - name: "OS X - Node 8"
+      os: osx
+      osx_image: xcode9.2
+      language: node_js
       node_js: "8"
-    - os: osx
-      osx_image: xcode8.3
+    - name: "OS X - Node 10"
+      os: osx
+      osx_image: xcode9.2
+      language: node_js
       node_js: "10"
-    - os: osx
-      osx_image: xcode8.3
+    - name: "OS X - Node 11"
+      os: osx
+      osx_image: xcode9.2
+      language: node_js
       node_js: "11"
