--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Node.js implementation of HighwayHash, Google's fast and strong hash function",
   "homepage": "https://github.com/lovell/highwayhash",
   "scripts": {
-    "install": "prebuild-install || node-gyp rebuild",
-    "test": "semistandard && cc && node test/unit && prebuild-ci"
+    "install": "prebuild-install --runtime=napi || node-gyp rebuild",
+    "test": "semistandard && cpplint && node test/unit && prebuild-ci"
   },
   "main": "index.js",
   "repository": {
@@ -22,18 +22,23 @@
   ],
   "dependencies": {
     "node-addon-api": "^3.0.0",
-    "prebuild-install": "^5.2.4"
+    "prebuild-install": "^5.3.5"
   },
   "devDependencies": {
-    "cc": "^1.0.2",
+    "cc": "^2.0.1",
     "long": "^4.0.0",
-    "prebuild": "^8.1.2",
-    "prebuild-ci": "^2.2.3",
-    "semistandard": "^13.0.1"
+    "prebuild": "^10.0.0",
+    "prebuild-ci": "^3.1.0",
+    "semistandard": "^14.2.2"
   },
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=6"
+    "node": ">=10"
+  },
+  "binary": {
+    "napi_versions": [
+      3
+    ]
   },
   "cc": {
     "ignore": [
