--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,18 @@
-os: Visual Studio 2015
+os: Visual Studio 2019
 version: "{build}"
 build: off
-platform: x64
+platform: x86
 environment:
   matrix:
   - nodejs_version: "10"
+    prebuild: true
   - nodejs_version: "12"
   - nodejs_version: "14"
+  - nodejs_version: "15"
 install:
-  - ps: Install-Product node $env:nodejs_version x64
-  - npm install
+  - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild $env:nodejs_version)
+  - npm install --build-from-source
 test_script:
   - npm test
+on_success:
+  - if [%prebuild%] == [true] if [%APPVEYOR_REPO_TAG%] == [true] npx prebuild --runtime napi --target 3
