--- a/bench/package.json
+++ b/bench/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "benchmark": "^2.1.4",
-    "farmhash": "^3.1.0"
+    "farmhash": "^3.2.0",
+    "highwayhasher": "0.0.3"
   },
   "license": "Apache-2.0",
   "engines": {
