--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,27 +10,23 @@ jobs:
       matrix:
         include:
           - os: ubuntu-20.04
-            container: centos:7
             nodejs_version: 10
             prebuild: true
           - os: ubuntu-20.04
-            container: centos:7
             nodejs_version: 12
           - os: ubuntu-20.04
-            container: centos:7
             nodejs_version: 14
           - os: ubuntu-20.04
-            container: centos:7
             nodejs_version: 15
           - os: ubuntu-20.04
-            container: node:10-alpine3.11
+            container: node:10-alpine3.12
             prebuild: true
           - os: ubuntu-20.04
-            container: node:12-alpine3.11
+            container: node:12-alpine3.12
           - os: ubuntu-20.04
-            container: node:14-alpine3.11
+            container: node:14-alpine3.12
           - os: ubuntu-20.04
-            container: node:15-alpine3.11
+            container: node:15-alpine3.12
           - os: macos-10.15
             nodejs_version: 10
             prebuild: true
@@ -50,16 +46,11 @@ jobs:
           - os: windows-2019
             nodejs_version: 15
     steps:
-      - name: Dependencies (Linux glibc)
-        if: contains(matrix.container, 'centos')
-        run: |
-          curl -sL https://rpm.nodesource.com/setup_${{ matrix.nodejs_version }}.x | bash -
-          yum install -y gcc-c++ make git python3 nodejs
       - name: Dependencies (Linux musl)
         if: contains(matrix.container, 'alpine')
         run: apk add build-base git python3 --update-cache
-      - name: Dependencies (macOS, Windows)
-        if: contains(matrix.os, 'macos') || contains(matrix.os, 'windows')
+      - name: Dependencies (Linux glibc, macOS, Windows)
+        if: contains(matrix.container, 'alpine') != true
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.nodejs_version }}
